--- a/index.css
+++ b/index.css
@@ -1,20 +1,80 @@
-body{
+body {
     background-color: black;
     color: white;
     font-size: 1.5rem;
+    margin:0px 120px ;
 }
-#container{
-    border: 2px solid grey;
+
+#container {
     background-color: rgb(43, 40, 40);
     margin: 70px 70px;
     border-radius: 20px;
-   
+
 }
-#image{
-    border: 2px solid red;
+
+#image {
     width: 350px;
-    align-items: center;
+    border-radius: 30px;
+    box-shadow:5px 10px 500px red ; 
+}
+
+#img-div {
+    text-align: center;
+    
+}
+
+#date {}
+
+#last {
+    text-align: center;
+    padding-bottom: 30px;
+  
+}
+
+#link {
+    border: 2px solid orange;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 10px;
+
+}
+
+#link:hover {
+    background-color: rgb(36, 33, 33);
+    color: red
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+#heading-1{
+    font-family: 'Lobster', cursive;
+    font-size: 5rem;
+    text-align: center;
+    margin-top: 60px;
+}
+#span{
+    color: red;
 }
 #date{
-    text-align: center;
+    font-size:  1.2rem;;
+}
+#info{
+    width: 80%;
+    text-align: justify;
+    margin: 20px auto;
+    
+}
+#heading-2{
+    width: 80%;
+    margin-left: 120px;
+    font-family: 'Lobster', cursive;
+    color: red;
+    font-size: 1.5rem;
+    
+}
+#list{
+    width: 80%;
+    margin: auto;
+    line-height: 3rem;
 }
